--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -19,7 +19,7 @@
       </span>
 
       <span class="text-xs opacity-50">
-        <%= render 'components/datetime', datetime: story.published_at %>
+        <%= render 'components/datetime', datetime: story.created_at %>
       </span>
     </div>
 
