--- a/app/views/topics/_link.html.erb
+++ b/app/views/topics/_link.html.erb
@@ -1,6 +1,6 @@
 <li class="text-sm text-second py-1.5">
   <span class="text-xs opacity-70 mr-1">
-    <%= render 'components/datetime', datetime: topic.published_at %>
+    <%= render 'components/datetime', datetime: topic.created_at %>
   </span>
   <%= link_to topic.title_text, 
     topic_path(topic), 
