--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -18,7 +18,7 @@
       </span>
 
       <span class="text-xs opacity-50">
-        <%= render 'components/datetime', datetime: topic.published_at %>
+        <%= render 'components/datetime', datetime: topic.created_at %>
       </span>
     </div>
 
