--- a/app/views/daily/index.html.erb
+++ b/app/views/daily/index.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full max-w-prose mx-auto bg-white py-8 sm:px-14 px-8 sm:px-12">
+<div class="w-full max-w-prose mx-auto bg-white pt-12 pb-16 sm:px-14 px-8 sm:px-12">
   <div class="mb-10 border-y-4 py-1 border-primary">
     <div class="border-y py-3 border-primary">
       <div class="flex items-center justify-between">
