--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -40,7 +40,7 @@
             controller: 'prefetch',
             turbo_frame: '_top'
           },
-          class: "btn btn-block btn-ghost btn-sm sm:btn-link btn-neutral sm:w-[unset] text-sm opacity-70 capitalize" %>
+          class: "btn btn-block btn-ghost sm:btn-link btn-neutral sm:w-[unset] text-sm opacity-70 capitalize" %>
       </div>
     </div>
   </div>
