--- a/app/views/stories/_link.html.erb
+++ b/app/views/stories/_link.html.erb
@@ -6,5 +6,5 @@
       turbo_frame: '_top'
     },
     class: "hover:text-primary" %>
-  <span class="text-xs opacity-70 ml-1"><%= story.domain_name %></span>
+  <span class="text-xs font-serif opacity-70 ml-1"><%= story.domain_name %></span>
 </li>
