--- a/app/views/stories/content.html.erb
+++ b/app/views/stories/content.html.erb
@@ -5,7 +5,7 @@
       <div class="flex justify-between pt-5 pb-2 border-b mb-4 sticky top-0 bg-white">
         <div class="text-sm ml-1 font-serif">
           <span class=""><%= t('.from') %>:</span>
-          <span class=""><%= @story.domain_name %></span>
+          <span class="font-serif"><%= @story.domain_name %></span>
         </div>
         <%= link_to t('.original_link'), 
           @story.url, 
