--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="autumn">
+<html data-theme="autumn" lang="<%= current_locale %>">
   <head>
     <%= display_meta_tags site: 'ReadX', og: { title: 'ReadX',  image: image_url('bg.png')}, twitter: { card: 'summary', image: image_url('bg.png')}, description: t('page_description')  %>
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no, viewport-fit=cover">
