--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -15,7 +15,7 @@
             controller: 'prefetch',
             turbo_frame: '_top'
           },
-          class: 'absolute inset-0 w-full hidden sm:block' %>
+          class: 'absolute inset-0 w-full hidden sm:block opacity-0' %>
       </span>
 
       <span class="text-xs opacity-70">
