--- a/app/views/components/_markets.html.erb
+++ b/app/views/components/_markets.html.erb
@@ -1,7 +1,13 @@
 <ul class="menu menu-xs min-h-full bg-base-100 text-base-content divide-y border-r pt-16 sm:pt-0 pb-16 sm:pb-0">
   <% CoinGecko.coins_markets_cache.each do |market| %>
+    <% next if market.blank? %>
+
     <li class="">
-      <div class="block relative <%= request.params[:tag] == market['symbol'].upcase ? 'bg-base-200' : '' %>">
+      <%= link_to stories_path(tag: market['symbol']&.upcase), 
+        data: {
+          turbo_frame: '_top'
+        },
+        class: "block #{request&.params&.[](:tag) == market['symbol']&.upcase ? 'bg-base-200' : ''}" do %>
         <div class="flex items-center justify-between font-mono">
           <div class="text-sm uppercase opacity-50">
             <%= market['symbol'] %>
@@ -10,17 +16,11 @@
             $<%= pretty_price market['current_price'] %>
           </div>
         </div>
+
         <div class="flex justify-end text-xs <%= market['price_change_percentage_24h'] > 0 ? 'text-green-600' : 'text-red-600' %>">
           <%= format('%.2f', market['price_change_percentage_24h'].to_f) %>%
         </div>
-
-        <%= link_to '', 
-          stories_path(tag: market['symbol'].upcase), 
-          data: {
-            turbo_frame: '_top'
-          },
-          class: 'absolute inset-0' %>
-      </div>
+      <% end %>
     </li>
   <% end %>
 </ul>
