--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -9,12 +9,12 @@
     <div class="relative">
       <span data-card-target="title" class="text-lg sm:hover:link sm:hover:text-primary">
         <%= topic.title_text %>
-        <%= link_to topic.title_text, topic_path(topic), 
+        <%= link_to '', topic_path(topic), 
           data: {
             controller: 'prefetch',
             turbo_frame: '_top',
           },
-          class: 'absolute inset-0 w-full hidden sm:block' %>
+          class: 'absolute inset-0 w-full hidden sm:block opacity-0' %>
       </span>
 
       <span class="text-xs opacity-70">
