--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -9,12 +9,14 @@
     <div class="relative">
       <span data-card-target="title" class="text-lg sm:hover:link sm:hover:text-primary">
         <%= topic.title_text %>
-        <%= link_to '', topic_path(topic), 
+        <%= link_to topic_path(topic), 
           data: {
             controller: 'prefetch',
             turbo_frame: '_top',
           },
-          class: 'absolute inset-0 w-full hidden sm:block opacity-0' %>
+          class: 'absolute inset-0 w-full hidden sm:block opacity-0' do %>
+          <span class='sr-only'><%= topic.title_text %></span>
+        <% end %>
       </span>
 
       <span class="text-xs opacity-70">
